--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced Tic-Tac-Toe</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Tic-Tac-Toe</h1>
@@ -23,6 +23,6 @@
         <p class="status">Player X's turn</p>
         <button class="restart">Restart Game</button>
     </div>
-    <script src="js/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
